# fundex

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  main.cc  main.cpp
src/cli/: CMakeLists.txt  flags.cpp  flags.h  subcommand_add.cpp  subcommand_add.h  subcommand_rm.cpp  subcommand_rm.h  subcommand_show.cpp  subcommand_show.h  utilities.cpp  utilities.h
src/db/: CMakeLists.txt  category_table.cpp  category_table.h  database.h  db_data.cpp  db_data.h  db_manager.cpp  db_manager.h  table.h  transaction_filter.h  transaction_table.cpp  transaction_table.h  utilities.cpp  utilities.h
tests/: CMakeLists.txt  fixtures.h  main.cpp  test_add_transactions.cpp  test_category_table.cpp  test_database.cpp  test_db_manager.cpp  test_remove_transactions.cpp  test_show_transactions.cpp  test_transaction_table.cpp
